<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_default"
    tools:context=".ui.FormTaskFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_default"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:id="@+id/textToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_title_form_task_fragment"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_description_form_task_fragment"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/text_description_hint_form_task_fragment"
                android:padding="14dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/text_status_form_task_fragment"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Lembrete" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:id="@+id/rbTodo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:text="@string/status_task_todo"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rbDoing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/status_task_doing"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rbDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/status_task_done"
                    android:textColor="@color/white" />

            </RadioGroup>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_btn"
                android:text="@string/text_btn_save_task_form_task_fragment"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminateTint="@color/white"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSave"
                tools:visibility="visible" />

            <Button
                android:id="@+id/Lembrete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lembrete"
                app:layout_constraintStart_toStartOf="@+id/edtDescription"
                app:layout_constraintTop_toBottomOf="@+id/edtDescription" />

            <Button
                android:id="@+id/Alarme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alarme"
                app:layout_constraintStart_toEndOf="@+id/Lembrete"
                app:layout_constraintTop_toBottomOf="@+id/edtDescription" />

            <TextView
                android:id="@+id/text_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="00"


                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/Lembrete"
                app:layout_constraintTop_toTopOf="@+id/doisPontos" />

            <TextView
                android:id="@+id/doisPontos"
                android:layout_width="10dp"
                android:layout_height="44dp"

                android:text=":"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/text_hora"
                app:layout_constraintTop_toBottomOf="@+id/Lembrete" />

            <TextView
                android:id="@+id/Minutos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="00"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/doisPontos"
                app:layout_constraintTop_toTopOf="@+id/doisPontos" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>